# HsC

./: Grammar.md  HsC.md  README.md
Code/: .gitignore  HsC.cabal
Code/Compiler/: Lexer.hs  Parser.hs  Syntax.hs
